# Mechatronics

./: GIT_HELP.md  README.md
quizzes/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  main.cpp  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h
quizzes/quiz0/: README.md
quizzes/quiz0/a/: arrays.cpp
quizzes/quiz1/: README.md
quizzes/quiz1/b/test/: utest.cpp
quizzes/quiz4/: README.md
quizzes/quiz4/a/: CMakeLists.txt  controller.cpp  controller.h  controllerinterface.h  laserprocessing.cpp  laserprocessing.h  quadcopter.cpp  quadcopter.h
quizzes/quiz4/a/test/: CMakeLists.txt  utest.cpp
quizzes/quiz5/: README.md
quizzes/test/: CMakeLists.txt
skeleton/: CMakeLists.txt
skeleton/a1_skeleton/: CMakeLists.txt  README.md  ackerman.cpp  ackerman.h  controller.cpp  controller.h  mission.cpp  mission.h  skidsteer.cpp  skidsteer.h
skeleton/a1_skeleton/test/: CMakeLists.txt
skeleton/a2_skeleton (copy)/: missioninterface.h
skeleton/a2_skeleton (copy)/test/: CMakeLists.txt  test_audi_reach_goals.cpp  test_mission_reach_goals.cpp  test_quad_reach_goals.cpp  tsp_reach_goals_quad.cpp
tutorials/week00/: README.md
tutorials/week01/: TUTORIAL.md
tutorials/week01/examples/: arrays.cpp
tutorials/week02/: TUTORIAL.md
tutorials/week02/examples/circles/: circle.cpp
tutorials/week02/examples/rectangles/: rectangle_main.cpp
tutorials/week03/: TUTORIAL.md
tutorials/week03/examples/ex01/: circle.h  shape.cpp  shape.h
tutorials/week03/examples/ex02/: circle.cpp  shape.h
tutorials/week03/starter/: rectangle.h
tutorials/week04/: ADVANCED.md  TUTORIAL.md
tutorials/week04/examples/basic_control/: CMakeLists.txt  control_ackerman.cpp
tutorials/week04/examples/shape/: index.dox
tutorials/week04/starter/basic_control/: CMakeLists.txt  main.cpp
tutorials/week05/examples/graph_search/: CMakeLists.txt
tutorials/week06/: PREWORK.md  TUTORIAL.md
tutorials/week06/examples/simple_threading/: main.cpp
tutorials/week06/starter/simple_threading/: main.cpp
tutorials/week06/starter/teleop/: CMakeLists.txt
tutorials/week07/: TUTORIAL.md
tutorials/week08/: QUAD.md  README.md  TUTORIAL.md
tutorials/week08/examples/ex01/: CMakeLists.txt  main.cpp
tutorials/week08/examples/ex01/dep/: CMakeLists.txt
tutorials/week08/examples/ex01/dep/include/: controller.h  skidsteer.h
tutorials/week08/examples/ex01/test/: CMakeLists.txt  test_audi.cpp  test_audi_reach_goals.cpp  test_controller_interface.cpp
tutorials/week08/examples/quad/: command_quadcopter.cpp  receive_laser.cpp  receive_sonar.cpp
tutorials/week08/starter/ex01/dep/include/: ackerman.h
tutorials/week08/starter/ex01/test/: CMakeLists.txt  test_audi.cpp  test_constructors.cpp  test_controller_interface.cpp
tutorials/week08/starter/quad/: CMakeLists.txt  command_quadcopter.cpp  receive_laser.cpp  receive_sonar.cpp
tutorials/week09/: TUTORIAL.md
week10/: README.md  TUTORIAL.md
week10/wk10_examples/quadcopter_control/src/: quadcopter.cpp
week10/wk10_starter/quadcopter_control/src/: controller.cpp
week11/: README.md  TASK2.md  TASK3.md  TUTORIAL.md
week12/: A3_FAQ.md  TUTORIAL.md
week12/a3_support/: CMakeLists.txt  mainpage.dox  package.xml
week12/a3_support/config/: bag_params.yaml
week12/a3_support/data/: A3_RACING.TXT  A3_TERRAIN.TXT  ACKERMAN_OFFROAD.TXT  QUADCOPTER_WALL.TXT
week12/a3_support/src/: simple_bag_recorder.cpp
